13_probes/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-ingress
spec:
  rules:
  - host: vault.local
    http:
      paths:
      - pathType: Exact
        path: /
        backend:
          service:
            name: vault-service
            port:
              number: 80
